name:                dummy-package
version:             0.2.0.0
synopsis:            Dummy package for testing Hackage
homepage:            bitemyapp.com
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Dummy
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      .
  default-language:    Haskell2010
